<resources>
    <string name="app_name">Playlist maker</string>
    <string name="name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediaLibrary">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darkTheme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="write">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <string name="anonsMedia">Здесь будет медиатека</string>
    <string name="agreementVeb">https://yandex.ru/legal/practicum_offer/</string>
    <string name="linkAndroidDeveloper">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="emailOfDeveloper">venera-sav@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>

</resources>