<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yp_blue"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="@dimen/headingSize"
        android:paddingBottom="14dp"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="@color/yp_black"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/headingSize" />

    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconTint="@color/yp_black"
        android:text="@string/media_library"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/headingSize"/>

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/yp_black"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/headingSize"/>

</LinearLayout>